force-app/main/default/objects/Sheet_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Form_Code__c</fullName>
        <label>Form Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Count__c</fullName>
        <label>Group Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Task__c</fullName>
        <label>Group Task</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Group__c</fullName>
        <label>Object Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Description__c</fullName>
        <label>Operation Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Text__c</fullName>
        <label>Operation Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sheet Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Form_Code__c</columns>
        <columns>Object_Type__c</columns>
        <columns>Object_Group__c</columns>
        <columns>Operation_Text__c</columns>
        <columns>Operation_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Form_Code__c</field>
            <operation>contains</operation>
            <value>4004</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SM-{0000}</displayFormat>
        <label>Sheet Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>